--- a/movies.html
+++ b/movies.html
@@ -41,7 +41,7 @@ padding: 5 px;}
 <table>
   <tr>
  <td>
-	<a href = "http://www.imdb.com/title/tt0080684/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2398042102&pf_rd_r=1RMF7VPZZPZFG2YAQ45K&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_12"> <img src = "Star Wars.jpg" width="250" height="320" alt = "Star Wars" align = "right" ></a> 
+	<a href = "http://www.imdb.com/title/tt0080684/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=2398042102&pf_rd_r=1RMF7VPZZPZFG2YAQ45K&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_12"> <img src = "Star wars.jpg" width="250" height="320" alt = "Star Wars" align = "right" ></a> 
 	<h2><b style="color:white;">Genre: </b>  Action, Adventure, Fantasy</h2>
 	<h2><b style="color:white;">Director: </b>Irvin Kershner</h2>
 	<h2><b style="color:white;">Writers: </b>Leigh Brackett (screenplay), Lawrence Kasdan (screenplay) 
@@ -72,9 +72,9 @@ padding: 5 px;}
 
 	<details>
  <summary>Screenshots</summary>
- <p><img src = "Ghosts/1.jpg" > </p>
- <p><img src = "Ghosts/2.jpg" > </p>
- <p><img src = "Ghosts/3.jpg" > </p>
+ <p><img src = "Ghosts/1 omg.jpg" > </p>
+ <p><img src = "Ghosts/2 omg.jpg" > </p>
+ <p><img src = "Ghosts/3 omg.jpg" > </p>
 </details>
 </td>
  </tr>
@@ -83,7 +83,7 @@ padding: 5 px;}
 <table>
   <tr>
  <td>
-<a href = "http://www.imdb.com/title/tt2591814/?ref_=nv_sr_1"> <img src = "Garden.jpg" width="250" height="320" alt = "Garden" align = "right" ></a> 
+<a href = "http://www.imdb.com/title/tt2591814/?ref_=nv_sr_1"> <img src = "Gardem.jpg" width="250" height="320" alt = "Gardem" align = "right" ></a> 
 	<h2><b style="color:white;"> Genre: </b> Animation, Drama, Romance
 	<h2><b style="color:white;">Director: </b> Makoto Shinkai
 	<h2><b style="color:white;">Writer: </b> Makoto Shinkai
@@ -93,9 +93,9 @@ padding: 5 px;}
 
 	<details>
  <summary>Screenshots</summary>
- <p><img src = "Garden/1.png" > </p>
- <p><img src = "Garden/2.png" > </p>
- <p><img src = "Garden/3.png" > </p>
+ <p><img src = "Garden/1 img.png" > </p>
+ <p><img src = "Garden/2 img.png" > </p>
+ <p><img src = "Garden/3 img.png" > </p>
 </details>
 </td>
  </tr>
