--- a/movies.html
+++ b/movies.html
@@ -72,9 +72,9 @@ padding: 5 px;}
 
 	<details>
  <summary>Screenshots</summary>
- <p><img src = "Ghosts/1 omg.jpg" > </p>
- <p><img src = "Ghosts/2 omg.jpg" > </p>
- <p><img src = "Ghosts/3 omg.jpg" > </p>
+ <p><img src = "ghosts/1 omg.jpg" > </p>
+ <p><img src = "ghosts/2 omg.jpg" > </p>
+ <p><img src = "ghosts/3 omg.jpg" > </p>
 </details>
 </td>
  </tr>
@@ -93,9 +93,9 @@ padding: 5 px;}
 
 	<details>
  <summary>Screenshots</summary>
- <p><img src = "Garden/1 img.png" > </p>
- <p><img src = "Garden/2 img.png" > </p>
- <p><img src = "Garden/3 img.png" > </p>
+ <p><img src = "garden/1 img.png" > </p>
+ <p><img src = "garden/2 img.png" > </p>
+ <p><img src = "garden/3 img.png" > </p>
 </details>
 </td>
  </tr>
