--- a/movies.html
+++ b/movies.html
@@ -12,6 +12,12 @@ div{
 opacity: 0.6;
 background: #FFFFFF;
 padding: 5 px;}
+h1:hover{
+color: darkblue;}
+
+h5:hover{
+color: #2F4F4F;}
+
 </style>
 <body>
 <h1> Movies</h1>
@@ -79,6 +85,7 @@ padding: 5 px;}
 </td>
  </tr>
 </table>
+
 <h5>Garden of words</h5>
 <table>
   <tr>
