--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ body {
 	background-image: url("Demon.jpg");
 	background-size: cover;
 }
+h1:hover{
+color: darkblue;}
+
+h5:hover{
+color: #2F4F4F;}
 </style>
 <body>
 <h1>Odilkhujaev Jamoliddinkhuja</h1>
