--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@ body {
 }
 h1:hover{
 color: darkblue;}
-
 h5:hover{
 color: #2F4F4F;}
 </style>
 <body>
-<h1>Odilkhujaev Jamoliddinkhuja</h1>
-<h5>ID:</h5><p>U1610092</p>
-<h5>Group Number:</h5> <p>002 (2-3-4)</p>
-<h5>Mail:</h5><p>j.odilkhujaev@student.inha.uz </p>
-<h5>Info:</h5><p> My name is too long,so friends call me watermelon. Straightforward, determind, sociable</p>
+<h1 style="transition: .7s;">Odilkhujaev Jamoliddinkhuja</h1>
+<h5 style="transition: .7s;">ID:</h5><p>U1610092</p>
+<h5 style="transition: .7s;">Group Number:</h5> <p>002 (2-3-4)</p>
+<h5 style="transition: .7s;">Mail:</h5><p>j.odilkhujaev@student.inha.uz </p>
+<h5 style="transition: .7s;">Info:</h5><p> My name is too long,so friends call me watermelon. Straightforward, determind, sociable</p>
 <p>My GPA is ...</p>
 <p><img src = "Watermelon.jpg" width="200" height="222" alt = "Watermelon">  </p>
-<h5> Hobbies and interests  </h5>
+<h5 style="transition: .7s;"> Hobbies and interests  </h5>
 <p>My hobby is creating, playing  games and writing novels </p>
-<h5><div align="center"><a href=" movies.html">Movies</a></div>
+<h5 style="transition: .7s;"><div align="center"><a href=" movies.html">Movies</a></div>
 </body>
 </html>
