--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ color: #2F4F4F;}
 <p><img src = "Watermelon.jpg" width="200" height="222" alt = "Watermelon">  </p>
 <h5 style="transition: .7s;"> Hobbies and interests  </h5>
 <p>My hobby is creating, playing  games and writing novels </p>
-<h5 style="transition: .7s;"><div align="center"><a href=" movies.html">Movies</a></div>
+<div ><a href=" movies.html"><h5 style="transition: .7s;"> Movies</a></div>
+<p>To reach github you can use this link <h5> <a href="https://green-blood.github.io/">Green-Blood.github.io </h5> </p>
 </body>
 </html>
