--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
 						<h4>System Administration</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+						<p>Experience with the Linux OS family, experience with nginx, apache. Winning a contest using administration skills</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -261,9 +261,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
-						<h4>Web Design</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-					</div>
+						<h4>Data analysis and Artificial Intelligence</h4>
+						<p>
+							Finished Artificial Intelligence, IOT, Wireless Communications courses with the highest grades. Have some experience with OpenCV, Big data analysis, cloud computing and etc.
+						</p>
+						</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="clearfix"> </div>
