--- a/index.html
+++ b/index.html
@@ -304,16 +304,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 																	  <h4 class="timeline-title">UIC Games</h4>
 																	</div>
 																	<div class="timeline-body">
-																		<p>IT technician: </p>
+																		<p>Game developer: </p>
 																		<ul class="timeline-panel">
 																			<li>
-																				<p> Completed repairs or submitted replacement orders for equipment that
-																					wasn’t performing at capacity</p>
+																				<p> Working as a game developer, was in development of O'ynar Kamera, Mental math and etc. </p>
 																			</li>
-																			<li>
-																				<p> Updating, upgrading, checking performance of OS in company, if
-																					needed reinstalling, and downloading new programs.</p>
-																			</li>
+
 																		</ul></div>
 																  </div>
 																</li>
