--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="tab-1 resp-tab-content" aria-labelledby="tab_item-0">
                         <div class="col-md-3 team-gd ">
                             <a href="#portfolioModal1" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Clicker/main.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Clicker/main.jpg" alt="">
 
                             </a>
 
                         </div>
                         <div class="col-md-3 team-gd ">
                             <a href="#portfolioModal12" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/WaterMelon%20Run/jump.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/WaterMelon%20Run/jump.png" alt="">
 
                             </a>
 
@@ -462,7 +462,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal11" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Multimedia/multi_main.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Multimedia/multi_main.jpg" alt="">
 
                             </a>
 
@@ -470,7 +470,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal5" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/BrainBattle/icon.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/BrainBattle/icon.png" alt="">
 
                             </a>
 
@@ -478,7 +478,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal6" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Uzbek%20Tragedy/menu1.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Uzbek%20Tragedy/menu1.png" alt="">
 
                             </a>
 
@@ -487,7 +487,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal2" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Studytokyo/Studytokyo.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Studytokyo/Studytokyo.jpg" alt="">
 
                             </a>
 
@@ -495,7 +495,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/HotelManagement/hotel.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/HotelManagement/hotel.jpg" alt="">
 
                             </a>
 
@@ -503,7 +503,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal4" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Heinamm/hein.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Heinamm/hein.jpg" alt="">
 
                             </a>
 
@@ -511,7 +511,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal13" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Asp.Net/asp.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Asp.Net/asp.jpg" alt="">
 
                             </a>
 
@@ -521,7 +521,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/MobileCommunications/mc.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/MobileCommunications/mc.png" alt="">
 
                             </a>
 
@@ -529,7 +529,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/TOPL/topl.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/TOPL/topl.jpg" alt="">
 
                             </a>
 
@@ -537,7 +537,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd yes_marg ">
 
                             <a href="#portfolioModal10" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Lane_Line/line.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Lane_Line/line.jpg" alt="">
 
                             </a>
 
