--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
     <title>Jey's Portfolio</title>
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel='stylesheet' type='text/css'/>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Custom Theme files -->
@@ -123,6 +124,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="col-md-5 header-left">
                     <img src="images/cover-image.jpg" alt="">
+                </div>
+                <div class="sidebar">
+                     <div class="social-links">
+                         <a href="https://www.facebook.com/JeyBloody"><i class="fab fa-facebook"></i> </a>
+                         <a href="https://twitter.com/StrangenGroup"><i class="fab fa-twitter"></i> </a>
+                         <a href="https://www.instagram.com/bloodyjey/"><i class="fab fa-instagram"></i> </a>
+                         <a href="https://t.me/bloodyjey"><i class="fab fa-telegram"></i> </a>
+                         <a href="https://www.linkedin.com/in/jey-302206168/"><i class="fab fa-linkedin"></i> </a>
+                         <a href="https://www.youtube.com/channel/UCYDlS9fbOjaI-kyWbhxrRRQ"><i class="fab fa-youtube"></i> </a>
+                         <a href="https://arbuzoletters.000webhostapp.com/"><i class="fas fa-link"></i> </a>
+                         <a href="https://github.com/Green-Blood"><i class="fab fa-github"></i> </a>
+                         <a href="https://www.researchgate.net/profile/Jamoliddinkhuja_Odilkhujaev"><i class="fab fa-researchgate"></i> </a>
+
+                     </div>
+                </div>
+                <div class="bubbles">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
+                    <img src="images/bubble3.png">
                 </div>
                 <div class="clearfix"></div>
 
@@ -549,7 +574,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd  ">
                             <div class="thumb">
                                 <a href="#portfolioModal1" class="portfolio-link b-link-diagonal b-animate-go"
-                                   data-toggle="modal"><img src="images/Clicker/main.jpg" alt="">
+                                   data-toggle="modal"><img class="corner" src="images/Clicker/main.jpg" alt="">
 
                                 </a>
                             </div>
@@ -557,7 +582,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd  ">
                             <div class="thumb">
                                 <a href="#portfolioModal12" class="portfolio-link b-link-diagonal b-animate-go"
-                                   data-toggle="modal"><img src="images/WaterMelon%20Run/jump.png" alt="">
+                                   data-toggle="modal"><img class="corner" src="images/WaterMelon%20Run/jump.png" alt="">
 
                                 </a>
                             </div>
@@ -565,7 +590,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
                             <div class="thumb">
                                 <a href="#portfolioModal5" class="portfolio-link b-link-diagonal b-animate-go"
-                                   data-toggle="modal"><img src="images/BrainBattle/icon.png" alt="">
+                                   data-toggle="modal"><img class="corner" src="images/BrainBattle/icon.png" alt="">
 
                                 </a>
                             </div>
@@ -573,7 +598,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd  ">
                             <div class="thumb">
                                 <a href="#portfolioModal6" class="portfolio-link b-link-diagonal b-animate-go"
-                                   data-toggle="modal"><img src="images/Uzbek%20Tragedy/menu1.png" alt="">
+                                   data-toggle="modal"><img class="corner" src="images/Uzbek%20Tragedy/menu1.png" alt="">
 
                                 </a>
                             </div>
@@ -592,7 +617,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal2" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Studytokyo/Studytokyo.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Studytokyo/Studytokyo.jpg" alt="">
 
                             </a>
 
@@ -600,7 +625,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal4" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Heinamm/hein.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Heinamm/hein.jpg" alt="">
 
                             </a>
 
@@ -608,7 +633,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal13" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Asp.Net/asp.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/Asp.Net/asp.jpg" alt="">
 
                             </a>
 
@@ -633,7 +658,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal5" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/BrainBattle/MENU%20.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/BrainBattle/MENU%20.png" alt="">
 
                             </a>
 
@@ -641,7 +666,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd">
 
                             <a href="#portfolioModal6" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/Uzbek%20Tragedy/menu1.png" alt="">
+                               data-toggle="modal"><img class="corner"  src="images/Uzbek%20Tragedy/menu1.png" alt="">
 
                             </a>
 
@@ -649,7 +674,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/MobileCommunications/mc.png" alt="">
+                               data-toggle="modal"><img class="corner" src="images/MobileCommunications/mc.png" alt="">
 
                             </a>
 
@@ -657,7 +682,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/TOPL/topl.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/TOPL/topl.jpg" alt="">
 
                             </a>
 
@@ -665,7 +690,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
 
                             <a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go"
-                               data-toggle="modal"><img src="images/HotelManagement/hotel.jpg" alt="">
+                               data-toggle="modal"><img class="corner" src="images/HotelManagement/hotel.jpg" alt="">
 
                             </a>
 
@@ -673,13 +698,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col-md-3 team-gd ">
                             <a href="#portfolioModal10" class="portfolio-link b-link-diagonal b-animate-go"
                                data-toggle="modal">
-                                <img src="images/Lane_Line/line.jpg" alt="">
+                                <img class="corner" src="images/Lane_Line/line.jpg" alt="">
                             </a>
                         </div>
                         <div class="col-md-3 team-gd ">
                             <a href="#portfolioModal11" class="portfolio-link b-link-diagonal b-animate-go"
                                data-toggle="modal">
-                                <img src="images/Multimedia/multi_main.jpg" alt="">
+                                <img class="corner" src="images/Multimedia/multi_main.jpg" alt="">
                             </a>
                         </div>
                         <div class="clearfix"></div>
@@ -831,9 +856,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-6 mail_right">
                 <form action="mailto:bloodjey98@gmail.com" enctype=”multipart/form-data” method="post"
-
-
-                      name=”EmailForm”>>
+                      name=”EmailForm”>
                     <input type="text" name="Name" value="Name" onfocus="this.value = '';"
                            onblur="if (this.value == '') {this.value = 'Name';}" required="">
                     <input type="email" name="Email" value="Email" onfocus="this.value = '';"
@@ -1162,7 +1185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <h3>PieScript</h3>
                         <img src="images/TOPL/topl.jpg" class="img-responsive img-centered" alt="">
                         <p>
-                            Theory of Progrmming languages course projects<br>
+                            Theory of Programming languages course projects<br>
                             Created a new programming language called PieScript, with it's own IDE PiDE. Main difference
                             from other languages is that this language is a combination of javascript and python
                             language with all benefits from both languages.
